<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/new_recipe_image_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tse.ihm.jaifaim.ui.NewRecipeActivity"
    android:orientation="vertical">

    <!-- Ajouter pour l'image -->
    <ImageView
        android:id="@+id/new_recipe_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        android:src="@drawable/camera" />

    <LinearLayout
        android:id="@+id/new_recipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:context="com.tse.ihm.jaifaim.ui.NewRecipeActivity"
        android:orientation="vertical">

    <EditText
        android:id="@+id/new_recipe_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:hint="@string/new_recipe_title"/>

    <EditText
        android:id="@+id/new_recipe_prep_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:hint="@string/new_recipe_prep_time"/>

    <EditText
        android:id="@+id/new_recipe_cooking_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:hint="@string/new_recipe_cooking_time"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_recipe_difficulty"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_difficulty_easy"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_difficulty_medium"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_difficulty_hard"/>
        </LinearLayout>
    </RadioGroup>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/new_recipe_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/new_recipe_type"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_type_dessert"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_type_dish"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_recipe_type_dessert"/>
        </LinearLayout>
    </RadioGroup>

    <EditText
        android:id="@+id/new_recipe_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:hint="Ingrédient 1" />

    <EditText
        android:id="@+id/new_recipe_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:hint="Etape 1" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Créer la recette"
        android:onClick="createRecipe"/>

    </LinearLayout>

</LinearLayout>

</ScrollView>