<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_login_vertical_margin"
    android:paddingLeft="@dimen/activity_login_horizontal_margin"
    android:paddingRight="@dimen/activity_login_horizontal_margin"
    android:paddingTop="@dimen/activity_login_vertical_margin"
    tools:context="com.tse.ihm.jaifaim.ui.LoginActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:text="@string/login_activity_title"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:hint="@string/login_activity_hint_username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:password="true"
        android:hint="@string/login_activity_hint_password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_button"
        android:onClick="login" />

    <fr.castorflex.android.circularprogressbar.CircularProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_activity_progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_login_vertical_margin"
        android:layout_marginBottom="@dimen/activity_login_vertical_margin"
        android:indeterminate="true"
        app:cpb_color="#FFee44"
        app:cpb_rotation_speed="1.0"
        app:cpb_sweep_speed="1.0"
        app:cpb_stroke_width="4dp"
        app:cpb_min_sweep_angle="10"
        app:cpb_max_sweep_angle="300"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/activity_login_vertical_margin"
        android:layout_marginBottom="@dimen/activity_login_vertical_margin"
        android:background="@android:color/holo_green_light"/>

    <TextView
        android:id="@+id/login_activity_sign_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

</LinearLayout>



